# gogo_shogi

./: Cargo.toml
src/: cui.rs  game.rs  logic.rs  main.rs
src/game/: board.rs  board_gen.rs  moves.rs  piece.rs  turn.rs
src/logic/: checkmate.rs  evaluator.rs  move_gen.rs  searcher.rs
