[package]
name = "gogo_shogi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
once_cell = "1.8.0"
pprof = { version = "0.4", features = ["flamegraph"] }

[profile.release]
debug = 1

[rust]
debuginfo-level = 1
